syntax = "proto3";

package threatlog;
option go_package = "./pkg/proto/threatlogpb";

// Servicio ThreatLog
service ThreatLogService {
  rpc LogEvent(LogRequest) returns (LogResponse);
}

message LogRequest {
  string username = 1;
  string eventType = 2;
  string timestamp = 3;
}

message LogResponse {
  bool success = 1;
  string message = 2;
}
